[gd_scene load_steps=9 format=3 uid="uid://di3ogi3b7dcv1"]

[ext_resource type="Script" uid="uid://upfq1v8i41wy" path="res://scripts/screens/main_menu.gd" id="1_idsrk"]
[ext_resource type="Texture2D" uid="uid://l0e7iratuj8c" path="res://assets/Wizard Pack/Jump.png" id="2_5weqt"]
[ext_resource type="Texture2D" uid="uid://4pvn02dk7s6e" path="res://assets/Wizard Pack/Fall.png" id="3_kacuo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rnwwu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p2xpu"]
bg_color = Color(0.784314, 0.784314, 0.784314, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.207843)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmlou"]
bg_color = Color(0.588235, 0.588235, 0.588235, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.207843)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rnwwu"]
bg_color = Color(1, 1, 1, 0.607843)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.207843)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="LabelSettings" id="LabelSettings_w18ys"]
font_size = 95
font_color = Color(0.572844, 0.691874, 0.367292, 1)
outline_size = 15

[node name="home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_idsrk")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = 0.999939
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.5
offset_top = -49.5
offset_right = 258.5
offset_bottom = 835.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(74.9995, 74.9995)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_rnwwu")
theme_override_styles/hover = SubResource("StyleBoxFlat_p2xpu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vmlou")
theme_override_styles/normal = SubResource("StyleBoxFlat_rnwwu")
text = "Play Game
"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(74.9995, 74.9995)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_rnwwu")
theme_override_styles/hover = SubResource("StyleBoxFlat_p2xpu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vmlou")
theme_override_styles/normal = SubResource("StyleBoxFlat_rnwwu")
text = "Settings"

[node name="About" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(74.9995, 74.9995)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_rnwwu")
theme_override_styles/hover = SubResource("StyleBoxFlat_p2xpu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vmlou")
theme_override_styles/normal = SubResource("StyleBoxFlat_rnwwu")
text = "About"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.179
anchor_top = 0.272
anchor_right = 0.179
anchor_bottom = 0.272
offset_left = -333.179
offset_top = -218.728
offset_right = 334.821
offset_bottom = 218.272
grow_vertical = 0
texture = ExtResource("2_5weqt")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.811
anchor_top = 0.739
anchor_right = 0.811
anchor_bottom = 0.739
offset_left = -255.811
offset_top = -131.261
offset_right = 254.189
offset_bottom = 130.739
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_kacuo")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -316.5
offset_top = -202.5
offset_right = 316.5
offset_bottom = -49.5
grow_horizontal = 2
grow_vertical = 2
text = "Emergence2D"
label_settings = SubResource("LabelSettings_w18ys")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/About" to="." method="_on_about_pressed"]
